Neighbourhood Login Page

--- a/neighbourhoodapp/templates/index.html
+++ b/neighbourhoodapp/templates/index.html
@@ -8,8 +8,8 @@
 
   <div class="jumbotron text-center mb-0" id="jumbo" style="background-color:white;">
 
-    <h1 class="h1" style="font-family: 'Dosis', cursive; color:blue;font-size:70px;">Awards</h1>
-    <p class="h1" style="font-family: 'Dosis', cursive; color:black;font-size:25px;">View projects, submit your own projects and have them reviewed.</p>
+    <h1 class="h1" style="font-family: 'Dosis', cursive; color:blue;font-size:70px;"> The Neighbourhood</h1>
+    <p class="h1" style="font-family: 'Dosis', cursive; color:black;font-size:25px;">Get Updates About Your Neighbourhood</p>
   </div>
 </div>
 
