--- a/neighbourhoodapp/templates/navbar.html
+++ b/neighbourhoodapp/templates/navbar.html
@@ -7,7 +7,7 @@
         <a class="navbar-brand" href="{% url 'homePage' %}"><img src="https://png.icons8.com/linen/50/000000/rating.png" style="height:40px;width:36px;">
       </a>
 
-      <a class="navbar-brand" id="victor" href="{% url 'homePage' %}">AWARDS
+      <a class="navbar-brand" id="victor" href="{% url 'homePage' %}">NEIGHBOURHOOD
       </a>
     </div>
     <div>
