--- a/neighbourhoodapp/templates/registration/login.html
+++ b/neighbourhoodapp/templates/registration/login.html
@@ -18,7 +18,7 @@
       <div class="card border-primary mb-4" style="max-width:25rem;">
 
         <div class="card-header text-center">
-          <h1 class="h1" style="font-family: 'Dosis', sans-serif; color:blue;font-size:65px;">AWARDS</h1>
+          <h1 class="h1" style="font-family: 'Dosis', sans-serif; color:blue;font-size:65px;">NEIGHBOURHOOD</h1>
           <h3 class="text-center" style="color:grey;font-size:15px;font-family: 'Dosis', sans-serif;">Login to see photos and videos from your friends.</h3>
         </div>
         <div class="card-body text-primary">
@@ -34,17 +34,13 @@
           </form>
         </div>
       </div>
-
     </div>
-
   </div>
-
 
   <!-- ********************* -->
 
   <div class="row p-0 m-0">
     <div class="col-md-6">
-
       <div class="card mt-5" style="width: 28rem;">
         <div class="card-body text-center">
           <h5 class="card-title" style="font-family: 'Dosis', sans-serif;">Don't have an account?</h5>
@@ -61,7 +57,6 @@
               style="height:90px;width:200px;"></a>
           <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/food-blogging.jpg' %}" style="height:90px;width:200px;"></a>
         </div>
-
       </div>
     </div>
   </div>
