--- a/neighbourhoodapp/templates/registration/registration_form.html
+++ b/neighbourhoodapp/templates/registration/registration_form.html
@@ -33,8 +33,8 @@
       <div class="card border-primary mb-4" style="max-width:25rem;">
 
         <div class="card-header text-center">
-          <h1 class="h1" style="font-family: 'Dosis', cursive; color:blue;font-size:65px;">Awards</h1>
-          <h3 class="text-center" style="font-family: 'Dosis', cursive;color:grey;font-size:15px;">Sign up to review and rate website projects</h3>
+          <h1 class="h1" style="font-family: 'Dosis', cursive; color:blue;font-size:65px;">NEIGHBOURHOOD</h1>
+          <h3 class="text-center" style="font-family: 'Dosis', cursive;color:grey;font-size:15px;">Sign up to view information about your neighbourhood</h3>
         </div>
         <div class="card-body text-primary">
 
