--- a/neighbourhoodapp/templates/registration/login.html
+++ b/neighbourhoodapp/templates/registration/login.html
@@ -6,7 +6,7 @@
       <p> Password or Username is incorrect </p>
       {% endif %}
 
-      <img class="thumbnail" src="{% static 'photos/gosh-her-voice-is-too-monotone.jpg' %}" style="height:500px;width:450px;">
+      <img class="thumbnail" src="{% static 'photos/image1.jpg' %}" style="height:400px;width:450px;">
 
 
     </div>
@@ -53,9 +53,10 @@
       <div class="card mt-5" style="width: 28rem;">
         <div class="card-body text-center">
           <h5 class="card-title" style="font-family: 'Dosis', sans-serif;" >Get the app.</h5>
-          <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img src="{% static 'photos/disruptive-innovation.jpg' %}"
+          <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8">
+            <img src="{% static 'photos/house1.jpg' %}"
               style="height:90px;width:200px;"></a>
-          <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/food-blogging.jpg' %}" style="height:90px;width:200px;"></a>
+          <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/house.jpeg' %}" style="height:90px;width:200px;"></a>
         </div>
       </div>
     </div>
