--- a/neighbourhoodapp/templates/registration/registration_form.html
+++ b/neighbourhoodapp/templates/registration/registration_form.html
@@ -5,7 +5,7 @@
   <div class="row">
 
     <div class="col-md-6 mt-5">
-      <img class="thumbnail" src="{% static 'photos/gosh-her-voice-is-too-monotone.jpg' %}" style="height:450px;width:600px;">
+      <img class="thumbnail" src="{% static 'photos/image1.jpg' %}" style="height:400px;width:600px;">
 
       <div class="card mt-5" style="width: 28rem;">
         <div class="card-body text-center">
@@ -18,9 +18,9 @@
       <div class="card mt-5" style="width: 28rem;">
         <div class="card-body text-center">
           <h5 class="card-title" style="font-family: 'Dosis', cursive;">Get the app.</h5>
-          <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img src="{% static 'photos/disruptive-innovation.jpg' %}"
+          <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img src="{% static 'photos/house.jpeg' %}"
               style="height:90px;width:200px;"></a>
-          <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/food-blogging.jpg' %}" style="height:90px;width:200px;"></a>
+          <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/house1.jpg' %}" style="height:90px;width:200px;"></a>
         </div>
       </div>
 
