--- a/neighbourhoodapp/templates/navbar.html
+++ b/neighbourhoodapp/templates/navbar.html
@@ -1,10 +1,10 @@
 {% load static %}
 <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Charmonman|Kodchasan|Dancing+Script|Spirax" rel="stylesheet">
 
-<nav class="navbar bg-light ">
+<nav class="navbar bg-light mb-0 mt-0 " id="nav">
   <div class="container-fluid">
     <div class="navbar-header">
-        <a class="navbar-brand" href="{% url 'homePage' %}"><img src="https://png.icons8.com/linen/50/000000/rating.png" style="height:40px;width:36px;">
+        <a class="navbar-brand" href="{% url 'homePage' %}"><img src="https://png.icons8.com/doodle/50/000000/home.png" style="height:40px;width:36px;">
       </a>
 
       <a class="navbar-brand" id="victor" href="{% url 'homePage' %}">NEIGHBOURHOOD
