--- a/neighbourhoodapp/templates/search.html
+++ b/neighbourhoodapp/templates/search.html
@@ -1,34 +1,18 @@
 {%extends 'base.html'%} {% block content %}
 <div class="container">
 
-  <div class="row">
-    {% if profiles %}
-    <h2 style="font-family: 'Kodchasan', sans-serif;color:white;"> Here are profiles of your search term: {{message}}</h2>
-    {% else %}
-    <h2 style="font-family: 'Kodchasan', sans-serif;color:white;"> It appears that there are 0 profiles for your search term
-      {{message}}, please try again. </h2>
-    {% endif %}
-
-  </div>
-
-  <h1 style="font-family: 'Dosis', sans-serif;"><strong> These are the projects found </strong></h1>
-
-  {% for profile in profiles %}
-  <p style="font-family: 'Dosis', sans-serif;"><a href="{% url 'individual_profile_page' profile.user.id %}"> {{profile.user.username}}</a></p>
-  {% endfor %}
 
 
   <div class="row">
 
-    {% if projects %}
+    {% if businesses %}
     <div class="container">
 
       <div class="card-columns">
 
-        {% for project in projects %}
+        {% for business in businesses %}
         <div class="card border-secondary">
-          <img src="{{project.project_image.url}}" data-target="#imageModal{{project.id}}" data-toggle="modal" alt="" class="img-fluid" id="eachimage"
-            size="100px200">
+          <p class="{{business.business_name}}"> <a href="{{business.id}}"></a></p>
         </div>
         {% endfor %}
       </div>
