--- a/neighbourhoodapp/templates/navbar.html
+++ b/neighbourhoodapp/templates/navbar.html
@@ -26,6 +26,9 @@
                     <a href="{%url 'new_project'%}">Post News</a>
                   </li>
       <li style="font-family: 'Dosis', sans-serif;">
+                    <a href="{%url 'new_neighbourhood'%}">Create Neighbourhood</a>
+                  </li>
+      <li style="font-family: 'Dosis', sans-serif;">
         <a href="/accounts/password/change">Change Password</a>
       </li>
 
